@@ -72,7 +72,7 @@ public class ReportService {
             .countRecordingsPerCase()
             .stream()
             .map(data -> new RecordingsPerCaseReportDTO((Case) data[0], ((Long) data[1]).intValue()))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional
@@ -80,8 +80,8 @@ public class ReportService {
         return recordingRepository
             .findAllByParentRecordingIsNotNull()
             .stream()
+            .sorted(Comparator.comparing(Recording::getCreatedAt))
             .map(EditReportDTO::new)
-            .sorted(Comparator.comparing(EditReportDTO::getCreatedAt))
             .collect(Collectors.toList());
     }
 
@@ -106,8 +106,8 @@ public class ReportService {
         return captureSessionRepository
             .findAllByStatus(RecordingStatus.RECORDING_AVAILABLE)
             .stream()
+            .sorted(Comparator.comparing(c -> c.getBooking().getScheduledFor()))
             .map(ScheduleReportDTO::new)
-            .sorted(Comparator.comparing(ScheduleReportDTO::getScheduledFor))
             .collect(Collectors.toList());
     }
 
@@ -118,7 +118,7 @@ public class ReportService {
                 .findAllAccessAttempts()
                 .stream()
                 .map(this::toPlaybackReport)
-                .collect(Collectors.toList());
+                .toList();
         } else if (source == AuditLogSource.PORTAL || source == AuditLogSource.APPLICATION) {
             final var activityPlay = "Play";
             final var functionalAreaVideoPlayer = "Video Player";
@@ -134,7 +134,7 @@ public class ReportService {
                 )
                 .stream()
                 .map(this::toPlaybackReport)
-                .collect(Collectors.toList());
+                .toList();
         } else {
             throw new NotFoundException("Report for playback source: " + source);
         }
@@ -145,8 +145,8 @@ public class ReportService {
         return recordingRepository
             .findAllByParentRecordingIsNull()
             .stream()
+            .sorted(Comparator.comparing(r -> r.getCaptureSession().getBooking().getScheduledFor()))
             .map(CompletedCaptureSessionReportDTO::new)
-            .sorted(Comparator.comparing(CompletedCaptureSessionReportDTO::getScheduledFor))
             .collect(Collectors.toList());
     }
 
@@ -155,8 +155,8 @@ public class ReportService {
         return shareBookingRepository
             .findAllByDeletedAtIsNotNull()
             .stream()
+            .sorted(Comparator.comparing(ShareBooking::getDeletedAt))
             .map(AccessRemovedReportDTO::new)
-            .sorted(Comparator.comparing(AccessRemovedReportDTO::getRemovedAt))
             .collect(Collectors.toList());
     }
 
@@ -167,7 +167,7 @@ public class ReportService {
             .stream()
             .map(this::getParticipantsForRecording)
             .flatMap(List::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<RecordingParticipantsReportDTO> getParticipantsForRecording(Recording recording) {
@@ -177,10 +177,21 @@ public class ReportService {
             .getParticipants()
             .stream()
             .map(participant -> new RecordingParticipantsReportDTO(participant, recording))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private PlaybackReportDTO toPlaybackReport(Audit audit) {
+        // S28-3604 discovered audit details records Recording Id as recordingId _and_ recordinguid
+        var auditDetails = audit.getAuditDetails() != null && !audit.getAuditDetails().isNull();
+        UUID recordingId = null;
+        if (auditDetails) {
+            if (audit.getAuditDetails().hasNonNull("recordingId")) {
+                recordingId = UUID.fromString(audit.getAuditDetails().get("recordingId").asText());
+            } else if (audit.getAuditDetails().hasNonNull("recordinguid")) {
+                recordingId = UUID.fromString(audit.getAuditDetails().get("recordinguid").asText());
+            }
+        }
+
         return new PlaybackReportDTO(
             audit,
             audit.getCreatedBy() != null
@@ -190,10 +201,8 @@ public class ReportService {
                             .map(AppAccess::getUser)
                             .orElse(null))
                 : null,
-            audit.getAuditDetails() != null && audit.getAuditDetails().hasNonNull("recordingId")
-                ? recordingRepository
-                .findById(UUID.fromString(audit.getAuditDetails().get("recordingId").asText()))
-                .orElse(null)
+            recordingId != null
+                ? recordingRepository.findById(recordingId).orElse(null)
                 : null
         );
     }
